# ctxrot

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
cli/: index.html  index.md
concepts/: index.html  index.md
ctxrot/: __init__.py  __main__.py  analysis.py  callback.py  cli.py  deep_analysis.py  export.py  pricing.py  storage.py  tokenizer.py
ctxrot/tui/: app.py  feed.py  growth.py  tree_view.py
deep-analysis/: index.html  index.md
docs/: api.md  examples.md  export.md  index.md  quickstart.md
docs/assets/stylesheets/: extra.css
examples/: README.md  cot_simple.py  custom_module.py  index.html  optimizer_bootstrap.py  react_multihop.py  rlm_reasoning.py
export/: index.html  index.md
quickstart/: index.html
search/: search_index.json
