[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxrot"
version = "0.1.0"
description = "Context analytics"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "William Brach", email = "wibrach@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "dspy", "context-window", "token-usage", "analytics", "context-rot"]
dependencies = [
    "dspy>=3.1.3",
    "litellm>=1.82.6",
    "rapidfuzz>=3.14.3",
    "textual>=8.1.1",
    "textual-plotext>=1.0.1",
    "tokie>=0.0.7",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[project.scripts]
ctxrot = "ctxrot.cli:app"

[project.urls]
Homepage = "https://github.com/williambrach/ctxrot"
Repository = "https://github.com/williambrach/ctxrot"
Issues = "https://github.com/williambrach/ctxrot/issues"


[tool.hatch.build.targets.sdist]
exclude = ["assets/", "examples/"]

[tool.hatch.build.targets.wheel]
exclude = ["assets/", "examples/"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "models.py"
]


# Same as Black.
line-length = 88
target-version = "py312"


[tool.ruff.lint]
#https://beta.ruff.rs/docs/rules/
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "G",
    "SIM1",
    "PLE",
    "N802", "N803", "N815", "N816","N806",
    "ANN",
    "C901",
    "UP",  # pyupgrade,
    "T201", # check if print statement exists
    "PLR0915"
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "G004",
    "ANN101",
    "ANN003",
    "B904",
    "G201"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

[tool.ruff.lint.pylint]
max-statements = 500

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*.py" = ["T201", "ANN"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
